--- a/client/src/pages/home.module.css
+++ b/client/src/pages/home.module.css
@@ -2,7 +2,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100dvh;
   max-width: 28rem;
   margin: 0 auto;
   background-color: #f9fafb;
